--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <head>
-     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-    <head></head>
-    <hi></hi>
-    <ps></ps>
 
+    <head>aluraFlix</head>
+    <hi>Bob Esponja | SpongeBob mandando MUITO bem na cozinha 🔥</hi>
+    <ps>#bob esponja na cozinha</ps>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/KFhlYA2WSSo?si=_Srp-XAQExgCLYzO"
+        title="YouTube video player" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
