--- a/index.html
+++ b/index.html
@@ -1,14 +1,26 @@
+   <html lang="pt-BR">
 <head>
     <link rel="stylesheet" href="style.css" />
+    <title>Aluraflix</title>
 </head>
 
 <body>
+     <header>aluraFlix</header>
 
-    <head>aluraFlix</head>
-    <hi>Bob Esponja | SpongeBob mandando MUITO bem na cozinha 🔥</hi>
-    <ps>#bob esponja na cozinha</ps>
+    <section>
+      <div>
+    <h1>Bob Esponja | SpongeBob mandando MUITO bem na cozinha 🔥</hi>
+    <p>#bob esponja na cozinha</p>
+    </div>
+
+    <div>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/KFhlYA2WSSo?si=_Srp-XAQExgCLYzO"
         title="YouTube video player" frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+
+    </section>
+
 </body>
+   </html>
